Fix GoReleaser: skip archives and checksums for Docker-only releases
Since we're not building binaries, GoReleaser was failing when trying
to create archives and checksums. Added explicit config to:
- Skip archives (format: binary)
- Disable checksums (no binaries to checksum)

This allows Docker-only releases to complete successfully.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,6 +10,14 @@ before:
 builds:
   - skip: true
 
+# Skip archives since we're not building binaries
+archives:
+  - format: binary
+
+# Skip checksums since we're not distributing binaries
+checksum:
+  disable: true
+
 changelog:
   sort: asc
   use: github
