Fix GoReleaser archives config
Changed archives.format from 'binary' to archives.id to properly skip
archives for Docker-only releases. This removes the deprecation warning.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,9 +10,9 @@ before:
 builds:
   - skip: true
 
-# Skip archives since we're not building binaries
+# No archives needed for Docker-only release
 archives:
-  - format: binary
+  - id: skip-archives
 
 # Skip checksums since we're not distributing binaries
 checksum:
